# reflection

./: .gitignore  CMakeLists.txt  Checker.hh  CheckerInt.hh  CheckerString.hh  GenericReflect.hh  Proxy.hh  ProxyInt.hh  ProxyString.hh  README.md  ReflectTest.cc  SubscriberPod.cc  SubscriberPod.hh  SubscriberPot.cc  SubscriberPot.hh  SubscriberReflect.cc  SubscriberReflect.hh  main.cc  spirit_parse.cc
